# Memory_Manager_Evaluation

./: .gitignore  CMakeLists.txt  License.txt  README.md
inc/: Utils.h
inc/Bluetooth/: BluetoothDevice.h  BluetoothManager.h  SimulatedBluetoothDevice.h
inc/Memory/: FakeNvmManager.h  MemoryManager.h  MemoryPool.h  NvmManager.h
inc/Reporting/: EventLogger.h
src/: Utils.cpp
src/Bluetooth/: BluetoothDevice.cpp  BluetoothManager.cpp  SimulatedBluetoothDevice.cpp
src/Memory/: FakeNvmManager.cpp  MemoryManager.cpp  MemoryPool.cpp  NvmManager.cpp
src/Reporting/: EventLogger.cpp
tests/: test_BluetoothManager.cpp  test_EventLogger.cpp  test_MemoryManager.cpp  test_MemoryPool.cpp
